--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-unused-vars" : "off"
+  
     },
     "parserOptions": {
       "parser": "babel-eslint"
